# openwind-v0.12.0

./: CHANGELOG.md  README.md  codemeta.json  meta.yaml  package-lock.json  package.json  requirements.txt  setup_and_run.ps1  tbump.toml
docs/: latest_changelog.md  requirements.txt  ui-upgrade-guide.md  update_codemeta.py  update_howto.py
docs/source/: README.rst  conf.py  examples.rst  first_step.rst
examples/: comparaison_WL.py  run_all_examples.py
examples/Besson_simulations/: BESSON_SIMPLIFICATION.py  Besson_Pitch_exploration.py  Besson_sound_synthesis.py  Compare_Impedance_Figure_CFA.py
examples/Ernoult-Chabassier-Rodriguez_Humeau_2021/: Compare_measurements_cylinder_436mm.py  Compare_measurements_simulations.py  Cylinder4Holes_Reconstruction.py  Fig3_Choice_observable.py  Fig4_sensitivities_cylinder_holes.py  Fig5_6_choice_freq_range.py  Fig7_Surface_observable.py  Fig8_9_Compare_results.py  compare_ma.py
examples/RR-humidity_Ernoult_2023/: Ac_properties.py  Effect_on_cylinder_pitch.py  Review_Gas_thermo_quantities_Cp_gamma_B.py  Review_thermal_conductivity.py  Review_viscosity.py
examples/Thibault-Chabassier-Boutin-Helie_JSV2022/: 1_validity_range.py  2_comparison_Kv.py  3_figures_JSV_numerique.py  (+1 more)
server/: pyproject.toml  requirements.txt
server/openwind_service/: __init__.py  deps.py  exporters.py  fingerings_bb.py  geometry_builder.py  main.py  models.py  openwind_adapter.py  optimize.py  recommend.py  simulate.py
tests/: launch_all_tests.py  test_fem_temporal.py
ui/: index.html  package-lock.json  package.json  vite.config.js
(+197 files in other folders)
